tests/cases/compiler-development/artifact/errors/syntax-recovery-enum-payload.ari
enum Broken {
  Some(i64
}

fn after() -> i64 {
  return 7;
}
